gradio&command-line

--- a/src/jupyter/report_generator.ipynb
+++ b/src/jupyter/report_generator.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f45cc627-7005-4943-92cc-212f7c98f556",
    "metadata": {},
    "outputs": [],
@@ -116,51 +116,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "cb4c8e66-41c5-4c60-9345-959f5bf935e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "from openai import OpenAI  # 导入OpenAI库用于访问GPT模型\n",
-    "# from logger import LOG  # 导入日志模块（演示时直接导入）\n",
+    "# from logger import LOG  # 导入日志模块\n",
+    "\n",
+    "deepseek_api_key = os.getenv(\"DEEPSEEK_API_KEY\")  # 从环境变量中获取 DeepSeek API密钥\n",
     "\n",
     "class LLM:\n",
-    "    def __init__(self, model=\"gpt-3.5-turbo\"):\n",
-    "        # 创建一个OpenAI客户端实例\n",
-    "        self.client = OpenAI()\n",
-    "        # 确定使用的模型版本\n",
+    "    def __init__(self, model=\"deepseek-chat\"):\n",
     "        self.model = model\n",
+    "        if self.model == \"deepseek-chat\":\n",
+    "            self.client = OpenAI(api_key=deepseek_api_key, base_url=\"https://api.deepseek.com\")\n",
+    "        else:\n",
+    "            # 创建一个OpenAI客户端实例\n",
+    "            self.client = OpenAI()\n",
+    "            # 从TXT文件加载提示信息\n",
+    "        with open(\"../../prompts/report_prompt.txt\", \"r\", encoding='utf-8') as file:\n",
+    "            self.system_prompt = file.read()\n",
     "        # 配置日志文件，当文件大小达到1MB时自动轮转，日志级别为DEBUG\n",
-    "        LOG.add(\"daily_progress/llm_logs.log\", rotation=\"1 MB\", level=\"DEBUG\")\n",
+    "        LOG.add(\"logs/llm_logs.log\", rotation=\"1 MB\", level=\"DEBUG\")\n",
     "\n",
     "    def generate_daily_report(self, markdown_content, dry_run=False):\n",
-    "        # 构建一个用于生成报告的提示文本，要求生成的报告包含新增功能、主要改进和问题修复\n",
-    "        system_prompt = f\"以下是项目的最新进展，根据功能合并同类项，形成一份简报，至少包含：1）新增功能；2）主要改进；3）修复问题；\"\n",
-    "        \n",
+    "        # 使用从TXT文件加载的提示信息\n",
+    "        messages = [\n",
+    "            {\"role\": \"system\", \"content\": self.system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": markdown_content},\n",
+    "        ]\n",
+    "\n",
     "        if dry_run:\n",
     "            # 如果启用了dry_run模式，将不会调用模型，而是将提示信息保存到文件中\n",
     "            LOG.info(\"Dry run mode enabled. Saving prompt to file.\")\n",
     "            with open(\"daily_progress/prompt.txt\", \"w+\") as f:\n",
-    "                f.write(system_prompt + \"\\n\\n\" + markdown_content)\n",
+    "                # 格式化JSON字符串的保存\n",
+    "                json.dump(messages, f, indent=4, ensure_ascii=False)\n",
     "            LOG.debug(\"Prompt saved to daily_progress/prompt.txt\")\n",
     "            return \"DRY RUN\"\n",
     "\n",
     "        # 日志记录开始生成报告\n",
-    "        LOG.info(f\"Starting report generation using model: {self.model}.\")\n",
+    "        LOG.info(\"Starting report generation using GPT model.\")\n",
     "        \n",
-    "        user_prompt = markdown_content\n",
-    "\n",
     "        try:\n",
-    "            # 调用OpenAI GPT模型生成报告\n",
+    "            # # 调用 DeepSeek API 生成报告\n",
+    "            # if self.model == \"deepseek-chat\":\n",
+    "            #     response = self.client.chat.completions.create(\n",
+    "            #         model=\"deepseek-chat\",\n",
+    "            #         messages=messages\n",
+    "            #     )\n",
+    "            # else:\n",
+    "            #     # 调用OpenAI GPT模型生成报告\n",
+    "            #     response = self.client.chat.completions.create(\n",
+    "            #         model=\"gpt-4o-mini\",  # 指定使用的模型版本\n",
+    "            #         messages=messages\n",
+    "            #     )\n",
     "            response = self.client.chat.completions.create(\n",
-    "                model=self.model,  # 指定使用的模型版本\n",
-    "                messages=[\n",
-    "                    {\"role\": \"system\", \"content\": system_prompt},\n",
-    "                    {\"role\": \"user\", \"content\": user_prompt}  # 提交用户角色的消息\n",
-    "                ]\n",
+    "                model=self.model,\n",
+    "                messages=messages\n",
     "            )\n",
-    "            LOG.debug(f\"{self.model} response: {response}\")\n",
+    "            LOG.debug(\"GPT response: {}\", response)\n",
     "            # 返回模型生成的内容\n",
     "            return response.choices[0].message.content\n",
     "        except Exception as e:\n",
@@ -179,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "652363c5-b211-48a9-93ae-54268e7ee13d",
    "metadata": {},
    "outputs": [],
@@ -271,18 +289,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "577d50a5-daf4-4d7d-adf4-6932af517037",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 实例化 LLM，并使用默认的 GPT-3.5-Turbo 模型\n",
-    "llm = LLM(model=\"gpt-4\")"
+    "llm = LLM()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
+   "id": "18765172",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'deepseek-chat'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "06114d2e-8a32-48f9-bcb8-4bb8e5460f3e",
    "metadata": {},
    "outputs": [],
@@ -293,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "fdb2b520-6a2f-4898-94cc-55e85d58fc3c",
    "metadata": {},
    "outputs": [
@@ -301,16 +340,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-14T15:14:53.972242+0800 INFO Starting report generation using model: gpt-4.\n",
-      "2024-10-14T15:15:11.313613+0800 DEBUG gpt-4 response: ChatCompletion(id='chatcmpl-AI9a3UKb605MKxAm3RIj6dDwrXmLH', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"**新功能：**\\n1. **Langchain模块增加：**\\n   - 新增了Langchain Box套框及其文档加载器。\\n   - 增加了新的社区提供者 - Agentic RAG例子。\\n   - 引入了更多的异步测试标准。\\n   - 加入了对多种区块链的支持。\\n\\n2. **文档和API更新：**\\n   - 更新了多个集成参考文档和Langchain版本的文档。\\n   - 新增了对文档索引和数据加载方式的说明。\\n\\n**主要改进：**\\n1. **测试和标准化：**\\n   - 增加了更多嵌入标准测试。\\n   - 引入了JSON模式的标准测试。\\n\\n2. **框架和规则改进：**\\n   - 对Langchain核心模块进行了Pydantic解析器修复。\\n   - 增加了B(bugbear) ruff规则以提高代码质量。\\n\\n3. **集成和兼容性：**\\n   - 测试了Pydantic 2和Langchain 0.3的兼容性。\\n   - 准备了向Pydantic 2迁移的根验证器升级。\\n\\n**修复问题：**\\n1. **错误修复：**\\n   - 修正了文档中的错别字和错误消息。\\n   - 解决了不同的搜索模式（向量与文本）产生不同结果的问题。\\n   - 修复了使用AzureSearch vectorstore时的文档ID作为键的问题。\\n\\n2. **系统错误与异常处理：**\\n   - 解决了在调用特定链时缺少输入键的错误。\\n   - 修正了未知类型 'ToolMessage' 的类型错误。\", refusal=None, role='assistant', function_call=None, tool_calls=None))], created=1728890095, model='gpt-4-0613', object='chat.completion', service_tier=None, system_fingerprint=None, usage=CompletionUsage(completion_tokens=441, prompt_tokens=6473, total_tokens=6914, prompt_tokens_details={'cached_tokens': 0}, completion_tokens_details={'reasoning_tokens': 0}))\n",
-      "2024-10-14T15:15:11.316338+0800 INFO Generated report saved to /Users/shenyige/Library/Mobile Documents/com~apple~CloudDocs/LLM/项目/my_app/GitHubSentinel/src/jupyter/report_generator_report.md\n"
+      "2024-10-16T22:05:27.163114+0800 INFO Starting report generation using GPT model.\n",
+      "2024-10-16T22:05:49.426673+0800 DEBUG GPT response: ChatCompletion(id='af6ef3df-7156-40b5-9081-37316e82a022', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"# LangChain 项目进展\\n\\n## 时间周期：2024-10-14至2024-10-16\\n\\n## 新增功能\\n- 添加了对CLOB数据类型的支持（#27330）\\n- 添加了Google Books工具（#27302）\\n- 添加了Databricks API构建（#27374）\\n\\n## 主要改进\\n- 更新了IBM `ChatWatsonx`文档（#27358）\\n- 改进了`parse_result`方法中的比较逻辑（#27244）\\n- 将Makefile迁移到Compose V2语法（#27241）\\n- 清理了openapi中的mypy语法警告（#27370）\\n- 更新了`integrations google`文档（#27218）\\n\\n## 修复问题\\n- 修复了vLLM集成中的SamplingParams过滤问题（#27367）\\n- 修复了KeyError: 'client'问题（#27345, #27344）\\n- 修复了Azure集成中的问题（#27336）\\n- 修复了document_loaders/youtube.py中的Pydantic AttributeError（#27320）\\n- 修复了DuckDuckGoSearchRun导致的AttributeError（#27184）\\n- 修复了ChatGroq中的“cannot pickle 'classmethod' object error”（#27144）\\n- 修复了`Text2vecEmbeddings`中的拼写错误（#27183）\\n- 修复了`PromptTemplate`文档中的拼写错误（#27107）\\n- 修复了pgvector弃用警告的格式问题（#27094）\\n- 修复了Arxiv搜索逻辑中的问题（#27084）\", refusal=None, role='assistant', function_call=None, tool_calls=None))], created=1729087527, model='deepseek-chat', object='chat.completion', service_tier=None, system_fingerprint='fp_1c141eb703', usage=CompletionUsage(completion_tokens=436, prompt_tokens=1420, total_tokens=1856, prompt_cache_hit_tokens=0, prompt_cache_miss_tokens=1420))\n",
+      "2024-10-16T22:05:49.431230+0800 INFO Generated report saved to daily_progress/langchain-ai_langchain/2024-10-14_to_2024-10-16_report.md\n"
      ]
     }
    ],
    "source": [
     "# 生成 LangChain 项目最近一日报告\n",
     "report_generator.generate_daily_report(\n",
-    "    markdown_file_path=\"/Users/shenyige/Library/Mobile Documents/com~apple~CloudDocs/LLM/项目/my_app/GitHubSentinel/src/jupyter/report_generator.ipynb\")"
+    "    markdown_file_path=\"daily_progress/langchain-ai_langchain/2024-10-14_to_2024-10-16.md\")"
    ]
   },
   {
@@ -323,18 +362,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "49620292-834f-465d-8ba5-e3bbf0045ad0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 实例化 LLM，并使用指定的 GPT-4-Turbo 模型\n",
-    "gpt_4 = LLM(model=\"gpt-4-turbo\")"
+    "gpt_4 = LLM()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "12429122-8bde-406f-9b9f-ec671871ab8c",
    "metadata": {},
    "outputs": [],
@@ -345,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "3aff72bc-9324-4553-9fb9-5948b8715cd8",
    "metadata": {},
    "outputs": [
@@ -353,16 +392,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-08-18T10:56:55.145158+0000 INFO Starting report generation using model: gpt-4-turbo.\n",
-      "2024-08-18T10:57:08.978956+0000 DEBUG gpt-4-turbo response: ChatCompletion(id='chatcmpl-9xXsd79DVlwcEKv7iIu1fBZr4nFpR', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='### 简报：langchain-ai/langchain 项目进展 (2024-08-18)\\n\\n下面是langchain-ai/langchain项目最新的进展情况，包括新增功能、主要改进和修复的问题。\\n\\n#### 1. 新增功能\\n- **Langchain-box集成：** 新增了`langchain box`包和`DocumentLoader`功能，用于更有效地加载和处理文档数据。\\n- **嵌入式集成测试：** 添加了嵌入式集成测试，保证各个部分功能的可靠性和稳定性。\\n\\n#### 2. 主要改进\\n- **依赖库升级：** 多个组件如openai, core, anthropic, voyageai等的依赖库都进行了升级，特别是与pydantic 2的兼容性改进。\\n- **文档更新：** 对现有文档进行了多项更新，包括安装提示(nltk、beautifulsoup4)和使用指南的改进，以及demo笔记本的修复。\\n- **功能使用更新：** 在openai集成笔记本中使用`.invoke`替代了`__call__`，以简化模型调用过程。\\n\\n#### 3. 修复问题\\n- **修复零除错误：** 在`ContextualCompressionRetriever`中修复了可能导致除以零错误的问题。\\n- **修复文档字符串和链接：** 对一些API参考文档中的链接和文档字符串进行了修复，提高了文档质量。\\n- **Azure集成修复：** 修复了Azure的JSON模式问题，确保在该平台上的正确数据格式化。\\n\\n本次进展报告涵盖了项目的重要更新和优化措施，旨在提高系统稳定性和用户体验。', role='assistant', function_call=None, tool_calls=None, refusal=None))], created=1723978615, model='gpt-4-turbo-2024-04-09', object='chat.completion', system_fingerprint='fp_c77e07d4ef', usage=CompletionUsage(completion_tokens=468, prompt_tokens=619, total_tokens=1087))\n",
-      "2024-08-18T10:57:08.980862+0000 INFO Generated report saved to daily_progress/langchain-ai_langchain/2024-08-18_report.md\n"
+      "2024-10-16T00:58:15.932497+0800 INFO Starting report generation using model: gpt-4o-mini.\n",
+      "2024-10-16T00:58:28.299083+0800 DEBUG gpt-4o-mini response: ChatCompletion(id='chatcmpl-AIfA9DT4n86H1XMrCjSW1Vm4Hjew2', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='### 项目进展简报 (2024-10-13 至 2024-10-16)\\n\\n#### 1）新增功能\\n- **Langchain Azure集成**：新增对Azure平台的支持，增强了与云服务的整合。\\n- **bm25检索模型保存和加载方法**：增加了bm25检索模型的保存和加载功能，提升了用户体验。\\n- **Anthropic提示缓存功能**：新增对Anthropic的提示缓存功能以优化性能。\\n\\n#### 2）主要改进\\n- **`parse_result`方法的比较功能**：在`parse_result`方法中添加了比较功能，提升了数据解析的准确性。\\n- **文档更新**：对`integrations`文档进行了多项更新，提升了使用指南的准确性；修复了`ChatWatsonx`文档中的错误，确保精确性。\\n- **代码结构重构**：重新构建了Arxiv搜索逻辑，以提高代码的可维护性和性能。\\n\\n#### 3）修复问题\\n- **修复KeyError异常**：解决了在未提供客户信息时出现的KeyError异常，增强了系统的鲁棒性。\\n- **Pydantic属性错误修复**：修复了在`document_loaders/youtube.py`中出现的Pydantic属性错误。\\n- **修复Typos**：对文档中的拼写错误进行了修正，确保文档内容准确。\\n- **解决数据库连接问题**：修复了Neo4j数据库的连接问题，确保查询功能正常。\\n\\n### 总结\\n此次更新主要集中在新增功能和重大改进方面，同时也解决了一系列问题，以优化项目的整体性能和用户体验。', refusal=None, role='assistant', function_call=None, tool_calls=None))], created=1729011497, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier=None, system_fingerprint='fp_e2bde53e6e', usage=CompletionUsage(completion_tokens=372, prompt_tokens=1109, total_tokens=1481, prompt_tokens_details={'cached_tokens': 0}, completion_tokens_details={'reasoning_tokens': 0}))\n",
+      "2024-10-16T00:58:28.301477+0800 INFO Generated report saved to daily_progress/langchain-ai_langchain/2024-10-13_to_2024-10-16_report.md\n"
      ]
     }
    ],
    "source": [
     "# 生成 LangChain 项目最近一日报告\n",
     "rg_gpt_4.generate_daily_report(\n",
-    "    markdown_file_path=\"daily_progress/langchain-ai_langchain/2024-08-18.md\")"
+    "    markdown_file_path=\"daily_progress/langchain-ai_langchain/2024-10-13_to_2024-10-16.md\")"
    ]
   },
   {
@@ -400,9 +439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "quickstart",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "quickstart"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
