Add Hacker News

--- a/src/jupyter/hacker_news_client.ipynb
+++ b/src/jupyter/hacker_news_client.ipynb
@@ -7,15 +7,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Show HN: Which Animal Shares Your Body Fat Percentage?\n",
+      "   Link: https://animalbodyfatmatch.netlify.app/\n",
+      "2. Zero or Sign Extend\n",
+      "   Link: https://fgiesen.wordpress.com/2024/10/23/zero-or-sign-extend/\n",
+      "3. Sinusoidal Sunlight\n",
+      "   Link: https://leancrew.com/all-this/2024/10/sinusoidal-sunlight/\n",
+      "4. Show HN: Satoshi9000 analog BTC key generator (mechanical)\n",
+      "   Link: item?id=41929822\n",
+      "5. Show HN: 2048 turned 10 this year, I built an updated version to celebrate\n",
+      "   Link: https://play2048.co\n",
+      "6. Pretty.c\n",
+      "   Link: https://github.com/aartaka/pretty.c\n",
+      "7. Show HN: Wall-mounted diffusion mirror that turns reflections into paintings\n",
+      "   Link: https://www.matthieulc.com/posts/pablonet/\n",
+      "8. How to Grip Bronze Age Swords\n",
+      "   Link: https://www.bookandsword.com/2024/10/19/how-to-grip-bronze-age-swords-response-to-dimicator-and-matt-easton/\n",
+      "9. Show HN: RF Hunter – Find hidden cameras and other devices\n",
+      "   Link: https://github.com/RamboRogers/rfhunter\n",
+      "10. CodeCrafters (YC S22) is hiring a full-stack engineer\n",
+      "   Link: https://www.ycombinator.com/companies/codecrafters/jobs/U31ttcu-software-engineer-product\n",
+      "11. Optimizing Beer Glass Shapes to Minimize Heat Transfer – New Results\n",
+      "   Link: http://www.arxiv.org/pdf/2410.12043\n",
+      "12. Building Document-Centric, CRDT-Native Editors\n",
+      "   Link: https://blocksuite.io/blog/document-centric.html\n",
+      "13. AWS data center latencies, visualized\n",
+      "   Link: https://benjdd.com/aws/\n",
+      "14. NetGuard – rootless Android outbound per-app OSS firewall, like LittleSnitch\n",
+      "   Link: https://netguard.me/\n",
+      "15. A field guide to the central, creeping section of the San Andreas Fault (2006)\n",
+      "   Link: https://www.researchgate.net/publication/262263511_A_field_guide_to_the_central_creeping_section_of_the_San_Andreas_Fault_and_the_San_Andreas_Fault_Observatory_at_Depth\n",
+      "16. Playstation Vita Architecture (Part 1)\n",
+      "   Link: https://www.copetti.org/writings/consoles/playstation-vita/\n",
+      "17. What Color is Your Function? (2015)\n",
+      "   Link: https://journal.stuffwithstuff.com/2015/02/01/what-color-is-your-function/\n",
+      "18. What happens when you make a move in lichess.org?\n",
+      "   Link: https://www.davidreis.me/2024/what-happens-when-you-make-a-move-in-lichess\n",
+      "19. How one engineer beat the ban on home computers in socialist Yugoslavia\n",
+      "   Link: https://www.theguardian.com/games/2024/oct/24/how-one-engineer-beat-the-ban-on-home-computers-in-socialist-yugoslavia\n",
+      "20. iOS 18.2 Lets EU Users Delete App Store, Safari, Messages, Camera and Photos\n",
+      "   Link: https://www.macrumors.com/2024/10/23/ios-18-2-eu-delete-apps/\n",
+      "21. The Anvil Text Editor\n",
+      "   Link: http://anvil-editor.net/\n",
+      "22. Show HN: Open-source low-code email editor\n",
+      "   Link: https://github.com/dittofeed/dittofeed/tree/main/packages/emailo\n",
+      "23. Ask HN: Website with 6^16 subpages and 80k+ daily bots\n",
+      "   Link: item?id=41923635\n",
+      "24. How I Got a Digital Nomad Visa for Japan\n",
+      "   Link: https://www.tokyodev.com/articles/how-i-got-a-digital-nomad-visa-for-japan\n",
+      "25. How do merging supermassive black holes pass the final parsec?\n",
+      "   Link: https://www.quantamagazine.org/how-do-merging-supermassive-black-holes-pass-the-final-parsec-20241023/\n",
+      "26. Probably pay attention to tokenizers\n",
+      "   Link: https://cybernetist.com/2024/10/21/you-should-probably-pay-attention-to-tokenizers/\n",
+      "27. The Tragedy of Google Books (2017)\n",
+      "   Link: https://www.theatlantic.com/technology/archive/2017/04/the-tragedy-of-google-books/523320/\n",
+      "28. My NumPy year: Creating a DType for the next generation of scientific computing\n",
+      "   Link: https://quansight.com/post/my-numpy-year-creating-a-dtype-for-the-next-generation-of-scientific-computing/\n",
+      "29. Launch HN: GPT Driver (YC S21) – End-to-end app testing in natural language\n",
+      "   Link: item?id=41924787\n",
+      "30. Fearless SSH: Short-lived certificates bring Zero Trust to infrastructure\n",
+      "   Link: https://blog.cloudflare.com/intro-access-for-infrastructure-ssh/\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "def fetch_hackernews_top_stories():\n",
-    "    url = 'https://hn.algolia.com/?q=langgraph'\n",
+    "    url = 'https://news.ycombinator.com/'\n",
     "    response = requests.get(url)\n",
     "    response.raise_for_status()  # 检查请求是否成功\n",
     "\n",
@@ -45,66 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "url = \"https://hn.algolia.com/?q=langgraph\"\n",
-    "response = requests.get(url)\n",
-    "response.raise_for_status()\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "articles = soup.find_all('article', class_='Story')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fn(n):\n",
-    "    return n % 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 6, 5, 4, 0, 5, 6)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fn(17), fn(27), fn(19), fn(11), fn(91), fn(61), fn(41)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://news.ycombinator.com/item?id=41203307\n",
-    "https://news.ycombinator.com/item?id=41181057\n",
-    "https://news.ycombinator.com/item?id=41722243"
-   ]
+   "source": []
   }
  ],
  "metadata": {
